--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "vue-loading-template": "^1.3.2",
     "vue-router": "^3.0.1",
     "vue-select": "^3.10.8",
-    "vuefire": "^2.2.0-alpha.0"
+    "vuefire": "^2.2.0-alpha.0",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.1.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -52,7 +54,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.4",
+    "jest": "^22.4.4",
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
